--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>javaxmrwallet</groupId>
-    <artifactId>com.okcoin.javaxmrwallet</artifactId>
+    <artifactId>javaxmrwallet</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
