--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,11 @@
     <artifactId>javawallet</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <dependencies>
+        <dependency>
+        <groupId>org.bitcoinj</groupId>
+        <artifactId>bitcoinj-core</artifactId>
+        <version>0.14.7</version>
+    </dependency>
+    </dependencies>
 </project>
